--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <div class="contact container-fluid">
 
         <div class="container ">
-            <form id="contact" action="contact.php" method="post">
+            <form id="contact" action="./images/contact.php" method="post">
                 <h1 style="text-decoration-line: underline;text-decoration-style: double;"><b>Contact Me</b></h1>
 
                 <fieldset>
