--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </form>
         </div>
         <div class="container icon-bottom ">
-            <h3>Or Just <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a> Me</h3>
+            <h3>Or Just <a href="mailto:kunalp.gohire@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a> Me</h3>
         </div>
     </div>
     <div class="footer container-fluid" id="Contact">
