--- a/index.html
+++ b/index.html
@@ -313,13 +313,13 @@
                 <h1 style="text-decoration-line: underline;text-decoration-style: double;"><b>Contact Me</b></h1>
 
                 <fieldset>
-                    <input placeholder="Your name" name="name" type="text" tabindex="1" required autofocus>
+                    <input placeholder="Your name" name="name" type="text" tabindex="1" required >
                 </fieldset>
                 <fieldset>
                     <input placeholder="Your Email Address" name="email_id" type="email" tabindex="2" required>
                 </fieldset>
                 <fieldset>
-                    <input placeholder="Subject" name="subject" type="text" tabindex="3" required autofocus>
+                    <input placeholder="Subject" name="subject" type="text" tabindex="3" required >
                 </fieldset>
                 <fieldset>
                     <textarea placeholder="Type your message here...." name="message" tabindex="4" required></textarea>
